--- a/app/src/main/res/layout/activity_mr_potato.xml
+++ b/app/src/main/res/layout/activity_mr_potato.xml
@@ -1,18 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:backgroundTint="@color/colorPrimaryDark"
     tools:context="com.elzen.tara.mrpotatohead.MrPotatoActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/body"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:srcCompat="@drawable/body" />
+
+        <ImageView
+            android:id="@+id/ears"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ears" />
+
+        <ImageView
+            android:id="@+id/arms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/arms" />
+
+        <ImageView
+            android:id="@+id/eyebrows"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/eyebrows" />
+
+        <ImageView
+            android:id="@+id/eyes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:srcCompat="@drawable/eyes" />
+
+        <ImageView
+            android:id="@+id/hat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/hat" />
+
+        <ImageView
+            android:id="@+id/nose"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/nose" />
+
+        <ImageView
+            android:id="@+id/shoes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/shoes" />
+
+        <ImageView
+            android:id="@+id/mustache"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:srcCompat="@drawable/mustache" />
+
+        <ImageView
+            android:id="@+id/mouth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/mouth" />
+
+        <ImageView
+            android:id="@+id/glasses"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/glasses" />
+
+    </FrameLayout>
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:columnCount="3"
+        android:rowCount="4"
+        android:layout_gravity="center">
+
+        <CheckBox
+            android:id="@+id/checkboxEyes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxEyes" />
+
+        <CheckBox
+            android:id="@+id/checkboxEars"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxEars" />
+
+        <CheckBox
+            android:id="@+id/checkboxEyebrows"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxEyebrows" />
+
+        <CheckBox
+            android:id="@+id/checkboxGlasses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxGlasses" />
+
+        <CheckBox
+            android:id="@+id/checkboxArms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxArms" />
+
+        <CheckBox
+            android:id="@+id/checkboxHat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxHat" />
+
+        <CheckBox
+            android:id="@+id/checkboxMouth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxMouth" />
+
+        <CheckBox
+            android:id="@+id/checkboxMustache"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxMustache" />
+
+        <CheckBox
+            android:id="@+id/checkboxNose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxNose" />
+
+        <CheckBox
+            android:id="@+id/checkboxShoes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="checkboxClicked"
+            android:text="@string/checkboxShoes" />
+
+    </GridLayout>
+
+</LinearLayout>
